--- a/webdemo/build.gradle
+++ b/webdemo/build.gradle
@@ -23,8 +23,11 @@ dependencies {
     runtime 'taglibs:standard:1.1.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.mockito:mockito-core:2.7.19'
+    testCompile 'io.github.bonigarcia:webdrivermanager:1.6.1'
+    testCompile 'org.seleniumhq.selenium:selenium-java:3.3.1'
 }
 
 gretty {
     servletContainer = 'tomcat8'
+    integrationTestTask = 'test'
 }
